<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory
        android:layout="@layout/preference_category_compact"
        app:title="@string/search_header">
        <SwitchPreferenceCompat
            android:layout="@layout/preference_compact"
            app:key="advanced_search"
            app:title="@string/search_title_advanced_options"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_compact"
        app:title="@string/display_header">

        <SwitchPreferenceCompat
            android:layout="@layout/preference_compact"
            app:key="area_coloring"
            app:title="@string/display_title_area_coloring"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:layout="@layout/preference_compact"
            app:key="area_coloring_darken_ratio"
            app:dependency="area_coloring"
            app:title="@string/display_title_area_coloring_ratio"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="0.92"
            app:iconSpaceReserved="false"
            />
<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

        <SwitchPreferenceCompat
            android:layout="@layout/preference_compact"
            app:key="phrase_meaning_domain"
            app:title="@string/display_title_phrase_meaning_domain"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:layout="@layout/preference_compact"
            app:key="ipa_presence"
            app:title="@string/display_title_ipa_present"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <ListPreference
            android:layout="@layout/preference_compact"
            app:key="theme_mode"
            app:title="@string/display_title_theme_mode"
            app:entries="@array/theme_mode_entries"
            app:entryValues="@array/theme_mode_values"
            app:defaultValue="follow_system"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_compact"
        app:title="@string/cache_header">

        <Preference
            android:layout="@layout/preference_compact"
            app:key="clear_cache"
            app:title="@string/cache_clear_title"
            app:summary="@string/cache_clear_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>
